# ASSISTapp

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/release/: app-release.apk  output.json
app/src/androidTest/java/com/theworkingbros/ak/assist/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/workingbros/ak/assist/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/theworkingbros/ak/assist/: Addpost.java  CGPA.java  CourseMaterial.java  LoginPage.java  MainActivity.java  Register.java  Userprofile.java  allclubs.java  club.java  cousefinal.java  firsttime.java  library.java
app/src/main/java/com/workingbros/ak/assist/: CGPA.java  MainActivity.java
app/src/main/res/drawable/: editshape.xml  outline_dashboard_24.xml  outline_feed_24.xml  outline_notifications_24.xml  outline_profile_24.xml
app/src/main/res/layout/: activity_addpost.xml  activity_addpostwoimg.xml  activity_allclubs.xml  activity_cgp.xml  activity_change_password.xml  activity_club.xml  activity_course_material.xml  activity_cousefinal.xml  activity_emailverify.xml  activity_feed.xml  activity_firsttime.xml  activity_library.xml  activity_login_page.xml  activity_main.xml  activity_post_view.xml  activity_post_viewwoimg.xml  activity_register.xml  activity_results.xml  activity_studymaterial.xml  activity_universitymap.xml  activity_userprofile.xml  app_bar_main.xml  content_universitymap.xml  fragment_feed.xml  fragment_home.xml  nav_header_main.xml  postrow.xml  postrowwoimg.xml  replies.xml
app/src/main/res/menu/: activity_main_drawer.xml  emailverify.xml  mainmenu.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/theworkingbros/ak/assist/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+29 files in other folders)
